force-app/main/default/objects/QL_QuipScheduledJob__c/QL_QuipScheduledJob__c.object-meta.xml
<CustomObject>
    <description>CRM-5833 This custom object stores the scheduled jobs for the batch that sends the emails along with Quip PDFs.</description>
    <label>Quip Scheduled Job</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Quip Scheduled Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quip Scheduled Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>