force-app/main/default/objects/QL_QuipScheduledJob__c/fields/Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>Batch_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Current Batch Status</label>
    <length>100</length>
    <type>Text</type>
</CustomField>