force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>QL_Account_Id__c</fullName>
    <description>CRM-5833 This field stores the ID of the account for which the job has been scheduled.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>