force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>QL_Account_Name__c</fullName>
    <description>CRM-5833 This stores the name of the Account for which the job is to be scheduled.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>