force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_ACR_Subscribed_Count__c.field-meta.xml
<CustomField>
    <fullName>QL_ACR_Subscribed_Count__c</fullName>
    <label>ACR Subscribed Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>