force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Job_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>QL_Job_Completed_Date__c</fullName>
    <description>This holds the date and time for the batch completion. CRM-6830</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Completed Date</label>
    <type>DateTime</type>
</CustomField>