force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>QL_Job_Name__c</fullName>
    <description>CRM-5833 This field is to store the name of the scheduled job.</description>
    <label>Completed Job Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Batch to Create QUIPs</fullName>
            </value>
            <value>
                <fullName>Batch to Remove QUIP Docs</fullName>
            </value>
            <value>
                <fullName>Batch to Refresh QUIPs</fullName>
            </value>
            <value>
                <fullName>Batch To Export As PDFs</fullName>
            </value>
            <value>
                <fullName>Batch to Send Emails Comms</fullName>
            </value>
            <value>
                <fullName>Batch To Send Comms Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>