force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Job_Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>QL_Job_Scheduled_Date_Time__c</fullName>
    <description>CRM-5833 This field stores the value at which the job has been scheduled to run.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Next Job Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>