force-app/main/default/objects/QL_QuipScheduledJob__c/fields/QL_Next_Job_Name__c.field-meta.xml
<CustomField>
    <fullName>QL_Next_Job_Name__c</fullName>
    <label>Next Job Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Batch to Create QUIPs</fullName>
            </value>
            <value>
                <fullName>Batch to Remove QUIP Docs</fullName>
            </value>
            <value>
                <fullName>Batch to Refresh QUIPs</fullName>
            </value>
            <value>
                <fullName>Batch To Export As PDFs</fullName>
            </value>
            <value>
                <fullName>Batch to Send Emails Comms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>