force-app/main/default/objects/QL_QuipScheduledJob__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account_Owner__c</columns>
    <columns>QL_Account_Name__c</columns>
    <columns>QL_Job_Name__c</columns>
    <columns>Batch_Status__c</columns>
    <columns>QL_Next_Job_Name__c</columns>
    <columns>QL_Job_Scheduled_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>