force-app/main/default/objects/QL_QuipScheduledJob__c/listViews/Quip_Jobs_Angelique_O_Sullivan.listView-meta.xml
<ListView>
    <fullName>Quip_Jobs_Angelique_O_Sullivan</fullName>
    <columns>QL_Account_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>QL_Next_Job_Name__c</columns>
    <columns>QL_ACR_Subscribed_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner__c</field>
        <operation>equals</operation>
        <value>Angelique O&apos;Sullivan</value>
    </filters>
    <label>Quip Jobs-Angelique O&apos;Sullivan</label>
</ListView>