force-app/main/default/objects/QL_QuipScheduledJob__c/listViews/Quip_JobsCatherine_De_Giorgio.listView-meta.xml
<ListView>
    <fullName>Quip_JobsCatherine_De_Giorgio</fullName>
    <columns>QL_Account_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>QL_Next_Job_Name__c</columns>
    <columns>QL_ACR_Subscribed_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner__c</field>
        <operation>equals</operation>
        <value>Catherine De-Giorgio</value>
    </filters>
    <label>Quip JobsCatherine De-Giorgio</label>
</ListView>