force-app/main/default/objects/QL_QuipScheduledJob__c/listViews/Quip_Scheduled_Jobs_Husain_Al_Jaber.listView-meta.xml
<ListView>
    <fullName>Quip_Scheduled_Jobs_Husain_Al_Jaber</fullName>
    <columns>QL_Account_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>QL_Next_Job_Name__c</columns>
    <columns>QL_ACR_Subscribed_Count__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner__c</field>
        <operation>equals</operation>
        <value>Husain Al Jaber</value>
    </filters>
    <label>Quip Scheduled Jobs - Husain Al Jaber</label>
</ListView>