force-app/main/default/objects/QL_QuipScheduledJob__c/listViews/Quip_Scheduled_Jobs_Melissa_Lau.listView-meta.xml
<ListView>
    <fullName>Quip_Scheduled_Jobs_Melissa_Lau</fullName>
    <columns>QL_Account_Name__c</columns>
    <columns>Account_Owner__c</columns>
    <columns>QL_Next_Job_Name__c</columns>
    <columns>QL_ACR_Subscribed_Count__c</columns>
    <columns>QL_Job_Scheduled_Date_Time__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Owner__c</field>
        <operation>equals</operation>
        <value>Melissa Lau</value>
    </filters>
    <label>Quip Scheduled Jobs - Melissa Lau</label>
</ListView>